# snark-setup

./: Cargo.toml  diff.txt  e2e.sh  powers_of_tau_chunked.sh  powers_of_tau_full.sh
.circleci/: config.yml
bls-snark-setup/: Cargo.toml
bls-snark-setup/src/cli/: new.rs
phase1/: .Cargo.toml.swp  Cargo.toml
phase1-cli/: Cargo.toml
phase1-cli/scripts/: phase1_chunked_prepare_phase2.sh
phase1-cli/src/: .combine.rs.swp  lib.rs  prepare_phase2.rs  transform_pok_and_correctness.rs
phase1-wasm/: .Cargo.toml.swp  Cargo.toml
phase1-wasm/src/: phase1.rs  tests.rs
phase1/benches/: phase1.rs
phase1/src/: aggregation.rs  verification.rs
phase1/src/helpers/: accumulator.rs  buffers.rs
phase2/: Cargo.toml
phase2-cli/: Cargo.toml
phase2-cli/examples/: proof.rs
phase2-cli/scripts/: phase2_chunked.sh
phase2-cli/src/: combine.rs  contribute.rs  lib.rs  new_challenge.rs  verify.rs
phase2/src/: .parameters.rs.swp  chunked_groth16.rs  keypair.rs  lib.rs  parameters.rs
phase2/src/helpers/: testing.rs
phase2/tests/: mpc.rs
powersoftau/: Cargo.toml
powersoftau/benches/: accumulator.rs
powersoftau/src/: batched_accumulator.rs  parameters.rs
powersoftau/src/cli_common/: combine.rs  contribute.rs  mod.rs  transform.rs  transform_full.rs  transform_pok_and_correctness.rs  transform_ratios.rs
powersoftau/src/raw/: raw_accumulator.rs
setup-utils/: Cargo.toml
setup-utils/benches/: math.rs
setup-utils/src/: elements.rs  errors.rs  groth16_utils.rs  helpers.rs  lib.rs
snark-utils/: Cargo.toml
snark-utils/benches/: io.rs
snark-utils/src/: elements.rs  errors.rs  groth16_utils.rs  helpers.rs  lib.rs  seed.rs
snark-utils/src/io/: mod.rs  read.rs
test-helpers/: Cargo.toml
test-helpers/src/: accumulator_helpers.rs  lib.rs
