[workspace]
members = [
    "./phase1",
    "./phase1-cli",
    "./phase1-wasm",
    "./phase2",
    "./setup-utils",
]

[patch.'https://github.com/scipr-lab/zexe']
zexe_algebra_core = { path = "/home/sami/zexe/algebra-core", package = "algebra-core", default-features = false, features = ["derive"] }
zexe_algebra = { path = "/home/sami/zexe/algebra", package = "algebra", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_fft = { path = "/home/sami/zexe/ff-fft", package = "ff-fft", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_bench_utils = { path = "/home/sami/zexe/bench-utils", package = "bench-utils", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_r1cs_core = { path = "/home/sami/zexe/r1cs-core", package = "r1cs-core", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_groth16 = { path = "/home/sami/zexe/groth16", package = "groth16", default-features = false, features = [] }
