[package]
name = "phase2"
edition = "2018"
version = "0.2.2"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
documentation = "https://docs.rs/phase2"
homepage = "https://github.com/ebfull/phase2"
license = "MIT/Apache-2.0"
repository = "https://github.com/ebfull/phase2"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
snark-utils = { path = "../snark-utils" }
zexe_algebra = { git = "https://github.com/scipr-lab/zexe", package = "algebra", rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1", features = ["parallel", "full"] }
zexe_groth16 = { git = "https://github.com/scipr-lab/zexe", package = "groth16", rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1", features = ["parallel"] }
zexe_r1cs_core = { git = "https://github.com/scipr-lab/zexe", package = "r1cs-core", rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1" }


rand = "0.7.3"
cfg-if = "0.1.10"
num_cpus = "1"
crossbeam = "0.7"
byteorder = "1.3.4"
rayon = "1.3.0"
tracing = "0.1.13"

[dev-dependencies]
powersoftau = { path = "../powersoftau" }
test-helpers = { path = "../test-helpers" }
zexe_r1cs_std = { git = "https://github.com/scipr-lab/zexe", package = "r1cs-std", rev = "38b6f6f2c6b9a6a1b5e8eb90b1287c98b06520d1" }
tracing-subscriber = "0.2.3"
